# shopify_agent

./: .dockerignore  .env.example  .gitignore  AGENT_CENTRIC_ARCHITECTURE.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  FEATURES.md  OPTIMIZATION_SUMMARY.md  SETUP.md  WHATSAPP_README.md  WHATSAPP_SETUP.md  docker-compose.yml  env.example  main.py  requirements-whatsapp.txt  run_whatsapp.py  test_context.py  test_shipping.py  test_shipping_simple.py  whatsapp_server.py
behold_agent/: DEPLOYMENT.md  Dockerfile  behold_analytics.db  main.py  pyproject.toml  requirements.txt
behold_agent/agent/: agent.py  callbacks.py  prompt.py  session_context.py
behold_agent/agent/tools/: __init__.py  shopify_tool.py  shopify_tool_backup.py  whatsapp_tools.py
behold_agent/agent/tools/whatsapp/: __init__.py  webhook_handler.py  whatsapp_integration.py  whatsapp_tool.py
behold_agent/analytics/: README.md  __init__.py  analytics_service.py  api_routes.py  cart_attribution.py  database.py  tracking_service.py  webhook_handler.py
whatsapp/: __init__.py  client.py  formatters.py  message_handler.py  session_manager.py
